--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -6,22 +6,42 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  border: 10px solid white;
 }
 
 .title {
   background: #e3f4ff;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  padding: 10px;
+  font-size: 15px;
 }
 
 .content {
   background: #e3f4ff;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .button-container {
   background: #e3f4ff;
+  margin-top: 5px;
+  padding-left: 170px;
+  padding-top: 10px;
+  padding-bottom: 8px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  padding-right: 25px;
+  padding-left: 25px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-left: -40px;
+  margin-top: 3px;
 }
