--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,21 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-right {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 16px;
+}
+
+.links {
+  display: flex;
+  justify-content: flex-start;
+  flex-grow: 2;
 }
 
 .profile-image {
@@ -27,6 +42,8 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  padding-left: 16px;
+  margin-right: -30px;
 }
 
 button {
@@ -35,6 +52,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin-right: 10px;
 }
 
 a {
@@ -45,4 +63,10 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+}
+
+ul li {
+  padding: 5px;
 }
