Badly finish Flexbox challenge 5 for TOP Review later

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,42 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-right: 0px;
+  margin-top: -50px;
+  max-width: 450px;
+}
+
+.header-area {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.header {
+  font-weight: bold;
+  font-size: larger;
+  margin-top: 10px;
+  margin-left: 5px;
+}
+
+.buttons {
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 68px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.middle-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 68px;
+  margin-right: 50px;
+  margin-top: -20px;
 }
 
 .icon {
@@ -33,6 +69,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 10px;
+  flex-shrink: 0px;
 }
 
 .close-button {
@@ -46,6 +84,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: 60px;
+  margin-top: 10px;
 }
 
 button {
